# RISCV-Simulator

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/processor/: ALU.h  CommonDataBus.hpp  LoadStoreBuffer.h  Memory.hpp  Prediction.h  Register.hpp  Reorder.h  ReservationStation.h  cpu.hpp  decode.h  opQueue.h
src/utils/: Type.hpp  queue.hpp  stack.hpp
testcases/: array_test1.data  hanoi.data  multiarray.data
